# kaggle_freuid_2026

./: .env.example  .gitignore  CLAUDE.md  README.md  REMOVED.md  ROADMAP.md  pyproject.toml
.claude/commands/: vessl.md
configs/: a100_effnetv2m.yaml  a100_vit_all_strategies.yaml  a100_vit_dct.yaml  baseline.yaml  baseline_colab.yaml  baseline_v0.yaml  baseline_v1.yaml  baseline_v1_synth.yaml  baseline_xdomain.yaml  consistency.yaml  consistency_v1.yaml  dylan_simple_resnet18.yaml  overlay_detector.yaml  overlay_detector_colab.yaml  smoke.yaml
docs/: competition.md  pipeline.md  problem.md  workflow.md
notebooks/: run_baseline.ipynb  run_baselinev0.ipynb  run_overlay.ipynb  run_smoke.ipynb  run_vessl.ipynb  setup_data.ipynb
report/: README.md  experiments.md
scripts/: ablate_heads.py  check_synth_tamper.py  download_data.sh  pull_from_vessl.sh  pull_submissions.sh  train_on_vessl.sh
src/freuid/: __init__.py  augment.py  backbone.py  config.py  consistency_model.py  data.py  eval.py  infer.py  loss.py  metrics.py  preprocess.py  train.py  transforms.py  utils.py
src/freuid/models/: __init__.py  baseline.py  consistency.py  dct_model.py  overlay.py
tests/: test_data.py  test_metrics.py  test_transforms.py
