[project]
name = "freuid"
version = "0.1.0"
description = "FREUID Challenge 2026 (IJCAI-ECAI) — identity document fraud detection"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "albumentations>=1.4",
    "kaggle>=1.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]
track = [
    "wandb>=0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freuid"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
