[project]
name = "freuid"
version = "0.1.0"
description = "FREUID Challenge 2026 (IJCAI-ECAI) — identity document fraud detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0",
    # <2: torchvision's PIL adjust_hue (ColorJitter) does `np.uint8(negative)`, which raises
    # OverflowError on numpy 2.x. The cloud torch image (torchvision 0.18) hits this; pin until upgraded.
    "numpy>=1.26,<2",
    "pandas>=2.2",
    "pillow>=10.0",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "albumentations>=1.4",
    # kaggle 2.x needs Python 3.11+; 3.10 cloud boxes (e.g. VESSL torch image) get 1.x. Both auth via kaggle.json.
    "kaggle>=2.2; python_version >= '3.11'",
    "kaggle>=1.6,<2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]
track = [
    "wandb>=0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freuid"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
